<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".common.presentation.dashboard.MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/carousel_view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/carousel_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:dotsColor="@color/blue_color"
            app:dotsSize="8dp"
            app:dotsSpacing="4dp"
            app:layout_constraintBottom_toBottomOf="@id/carousel_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:selectedDotColor="@color/dark_violet" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carousel_view"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@drawable/card_gradiant"
                android:layout_height="match_parent">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/web_view"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/DarkSlateGray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/home_tab_gradiant"
                        android:layout_height="match_parent">


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/web_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/web_icon"
                            app:civ_border_width="2dp"
                            app:civ_circle_background_color="@color/blue_color"
                            app:civ_border_color="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/web_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/website"
                            android:textAlignment="center"
                            android:textColor="@color/WhiteSmoke"
                            android:textSize="30dp"
                            android:layout_marginStart="30dp"
                            app:layout_constraintBottom_toBottomOf="@id/web_icon"
                            app:layout_constraintStart_toEndOf="@id/web_icon"
                            app:layout_constraintTop_toTopOf="@id/web_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/privacy_view"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/DarkSlateGray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/web_view"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/home_tab_gradiant"
                        android:layout_height="match_parent">


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/privacy_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/privacy_icon"
                            app:civ_circle_background_color="@color/blue_color"
                            app:civ_border_color="@color/black"
                            app:civ_border_width="2dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/privacy_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/privacy_policy"
                            android:textAlignment="center"
                            android:layout_marginStart="30dp"
                            android:textColor="@color/WhiteSmoke"
                            android:textSize="30dp"
                            app:layout_constraintBottom_toBottomOf="@id/privacy_icon"
                            app:layout_constraintStart_toEndOf="@id/privacy_icon"
                            app:layout_constraintTop_toTopOf="@id/privacy_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mini_game"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/DarkSlateGray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacy_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/home_tab_gradiant"
                        android:layout_height="match_parent">


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/minigame_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/game_icon"
                            app:civ_circle_background_color="@color/blue_color"
                            app:civ_border_color="@color/black"
                            app:civ_border_width="2dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/minigame_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/mini_game"
                            android:textAlignment="center"
                            android:layout_marginStart="30dp"
                            android:textColor="@color/WhiteSmoke"
                            android:textSize="30dp"
                            app:layout_constraintBottom_toBottomOf="@id/minigame_icon"
                            app:layout_constraintStart_toEndOf="@id/minigame_icon"
                            app:layout_constraintTop_toTopOf="@id/minigame_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>